# pyskeleton

./: .gitignore  pytest.ini  setup.cfg  setup.py
