[metadata]
name = 
description = 
author = Derek A. Thomas
author_email = derekathomas@gmail.com
keywords = 
url = 
long_description = README.md
long_description_content_type = text/markdown
classifier =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
python_requires = >=3.6
install_requires = 


setup_requires = 
    pytest-runner
    flake8

tests_require = 
    pytest
    pytest-coverage
    # pytest-asyncio
    pytest-timeout

[options.package_data]
* = *.jinja2,*.html,*.css,*.svg

[options.entry_points]
# console_scripts =
#     foo = foo.__main__:cli

[aliases]
test = pytest
lint = flake8

[flake8]
max-complexity = 10
ignore = E203, E266, E501, W503, E252 # temporarily add E252 because it requires pycodestyle bug fix #753
exclude = .git,docs,doc,dist,.eggs,old_runners
builtins = Future
max-line-length = 88
select = B,C,E,F,W,T4,B9
